<resources>
    <string name="app_name">Recetas</string>
    <string name="all">TODO</string>
    <string name="name">Final fantasy VII remake</string>
    <string name="date">2 de marzo de 2020</string>
    <string name="title_activity_main">Recetas</string>
    <string name="subtitle_activity_main">2021</string>
    <string name="title_activity_add">Nueva Receta</string>
    <string name="title_activity_edit">Datos de la Receta</string>
    <string name="name_form">Ingrese el nombre de su receta aquí...</string>
    <string name="date_form">Fecha</string>
    <string name="url_form">Subir Imagen</string>
    <string name="preparacion_form">Descripción</string>
    <string name="save">Guardar</string>
    <string name="description">Final Fantasy es una franquicia de medios creada por Hironobu Sakaguchi y desarrollada por Square Enix. La franquicia se centra en una serie de fantasía y ciencia ficción de videojuegos RPG.</string>
    <string name="ingrese_ingrediente">Ingrese Ingrediente</string>

    <string name="preparacion">Preparación</string>
    <string name="preparacion_receta">Aquí estará descrita la manera en como se preparará el plato en base a la receta rescrita líneas arriba</string>
    <string name="ingresar_ingrediente">Ingresar Aquí 1 Ingrediente</string>
    <string name="paso_paso_receta">Ingresar aquí una breve descripción de su receta...</string>
    <string name="modificar_datos">Modificar Datos</string>
    <string name="olvide_contrasena">Olvidé mi contraseña</string>
    <string name="no_registrado">No estoy registrado</string>
    <string name="cancelar_pdf">Cancelar PDF</string>
    <string name="cargar_archivo">Cargar Archivo</string>
</resources>