<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cocina.AddCocina">

    <View
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleAddCocina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_activity_add"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        android:background="#27283a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

            <ScrollView
                android:background="#27283a"
                android:id="@+id/verticalScroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_addNameCocina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="@string/name_form"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/et_addNameCocina"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_below="@+id/tv_addNameCocina"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:autofillHints="@string/name_form"
                        android:background="#3A3B55"
                        android:ems="80"
                        android:hint="@string/name_form"
                        android:inputType="textAutoComplete"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_addNameCocina" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_addNameCocina">

                        <TextView
                            android:id="@+id/tv_addIngredientesCocina"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="#000000"
                            android:gravity="center"
                            android:text="Ingredientes"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toStartOf="@+id/tv_addCantidadCocina"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ImageButton
                            android:id="@+id/newFloatingActionButton"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:background="@drawable/ic_plus"
                            android:backgroundTint="@color/white"
                            android:contentDescription="@string/all"
                            app:layout_constraintBottom_toBottomOf="@+id/tv_addIngredientesCocina"
                            app:layout_constraintEnd_toEndOf="@+id/tv_addIngredientesCocina"
                            app:layout_constraintTop_toTopOf="@+id/tv_addIngredientesCocina"
                            tools:ignore="VectorDrawableCompat" />

                        <EditText
                            android:id="@+id/et_addIngredienteCocina"
                            android:layout_width="0dp"
                            android:layout_height="56dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_margin="10dp"
                            android:autofillHints="@string/date_form"
                            android:background="#FF3A3B55"
                            android:ems="3"
                            android:hint="@string/ingresar_ingrediente"
                            android:inputType="date|text"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            app:layout_constraintEnd_toStartOf="@+id/et_addCantidadCocina"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_addIngredientesCocina" />

                        <EditText
                            android:id="@+id/et_addCantidadCocina"
                            android:layout_width="120dp"
                            android:layout_height="56dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_margin="10dp"
                            android:autofillHints="@string/date_form"
                            android:background="#FF3A3B55"
                            android:ems="3"
                            android:gravity="center"
                            android:hint="Ingr. Cant"
                            android:inputType="date|text"
                            android:paddingLeft="16dp"
                            android:paddingTop="8dp"
                            android:paddingRight="16dp"
                            android:paddingBottom="8dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tv_addCantidadCocina" />

                        <TextView
                            android:id="@+id/tv_addCantidadCocina"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:background="#000000"
                            android:gravity="center"
                            android:text="Cantidad"
                            android:textColor="@color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <ListView
                            android:layout_margin="10dp"
                            android:id="@+id/lv_addIngredientesCocina"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/lv_addCantidadCocina"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/et_addIngredienteCocina" />

                        <ListView
                            android:layout_margin="10dp"
                            android:id="@+id/lv_addCantidadCocina"
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/et_addIngredienteCocina" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ImageView
                        android:id="@+id/imageAddCocina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/urlImage"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/url_form"
                        android:inputType="textUri|text"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/urlImage" />

                    <Button
                        android:id="@+id/urlImage"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/et_addNameCocina"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:background="@drawable/ic_btn2"
                        android:gravity="center"
                        android:text="@string/url_form"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

                    <EditText
                        android:id="@+id/et_preparacionAddCocina"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_below="@+id/tv_preparacionAddCocina"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:autofillHints="@string/preparacion_form"
                        android:background="#FF3A3B55"
                        android:ems="255"
                        android:gravity="clip_vertical"
                        android:hint="@string/paso_paso_receta"
                        android:inputType="textMultiLine"
                        android:lines="6"
                        android:maxLines="12"
                        android:minLines="6"
                        android:paddingLeft="16dp"
                        android:paddingTop="8dp"
                        android:paddingRight="16dp"
                        android:paddingBottom="8dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_preparacionAddCocina" />

                    <TextView

                        android:id="@+id/tv_preparacionAddCocina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_margin="10dp"
                        android:text="@string/preparacion"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageAddCocina" />

                    <Button
                        android:id="@+id/saveButtonAddCocina"
                        android:layout_width="240dp"
                        android:layout_height="56dp"
                        android:layout_below="@+id/et_preparacionAddCocina"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/ic_btn2"
                        android:gravity="center"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_preparacionAddCocina" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>